--- a/gopref-nginx.conf
+++ b/gopref-nginx.conf
@@ -66,7 +66,7 @@ http {
                 ssl_certificate /etc/ssl/advpls.com.pem;
                 ssl_certificate_key /etc/ssl/advpls.com.key;
 
-                root /home/gopref/gopref/dist;
+                root /home/gopref/dist;
                 index index.html;
 
                 location / {
