--- a/gopref-nginx.conf
+++ b/gopref-nginx.conf
@@ -71,6 +71,13 @@ http {
 
                 location / {
                         index index.html;
+                        try_files $uri $uri/ @proxy;
+                }
+
+                location @proxy {
+                        proxy_pass http://localhost:4000;
+                        add_header 'Access-Control-Allow-Origin' '*';
+                        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
                 }
         }
 }
