--- a/gopref-nginx.conf
+++ b/gopref-nginx.conf
@@ -75,7 +75,7 @@ http {
                 }
 
                 location @proxy {
-                        proxy_pass http://localhost:4000;
+                        proxy_pass http://0.0.0.0:4000;
                         add_header 'Access-Control-Allow-Origin' '*';
                         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
                 }
