--- a/gopref-nginx.conf
+++ b/gopref-nginx.conf
@@ -75,9 +75,11 @@ http {
                 }
 
                 location @proxy {
-                        proxy_pass http://gopref:4000;
-                        add_header 'Access-Control-Allow-Origin' '*';
-                        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                  proxy_pass http://gopref:4000;
+                  add_header 'Access-Control-Allow-Origin' "*";
+                  add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
+                  add_header 'Access-Control-Allow-Credentials' 'true';
+                  add_header 'Access-Control-Allow-Headers' 'User-Agent,Keep-Alive,Content-Type';
                 }
         }
 }
