--- a/gopref-nginx.conf
+++ b/gopref-nginx.conf
@@ -62,7 +62,6 @@ http {
                 listen 443 ssl http2;
                 server_name staging-gopref.advpls.com;
 
-                ssl on;
                 ssl_certificate /etc/ssl/advpls.com.pem;
                 ssl_certificate_key /etc/ssl/advpls.com.key;
 
@@ -76,10 +75,8 @@ http {
 
                 location @proxy {
                   proxy_pass http://0.0.0.0:4000;
-                  add_header 'Access-Control-Allow-Origin' "*";
-                  add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
-                  add_header 'Access-Control-Allow-Credentials' 'true';
-                  add_header 'Access-Control-Allow-Headers' 'User-Agent,Keep-Alive,Content-Type';
+                  add_header 'Access-Control-Allow-Origin' '*';
+                  add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
                 }
         }
 }
