--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     ports:
       - 4000:4000
     volumes:
-      - ./tmp:tmp
+      - ./tmp:/app/tmp
   web:
     image: nginx
     container_name: nginx
